Bug 413736 - Widget's hover menu when in panel edit mode sometimes disappears when moving the cursor over it
Summary: Widget's hover menu when in panel edit mode sometimes disappears when moving ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.17.2
Platform: Neon Linux
: HI normal
Target Milestone: 1.0
Assignee: veggero
URL:
Keywords: usability
: 415405 443217 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-11-02 11:03 UTC by makosol
Modified: 2021-10-05 00:09 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.5
Sentry Crash Report:


Attachments
screen recording (3.43 MB, video/webm)
2020-04-10 13:21 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description makosol 2019-11-02 11:03:39 UTC
SUMMARY
When using a left vertical panel, when entering "modification mode" for the panel, it is not possible to reach the task manager widget options before it disappears when moving the mouse cursor towards it.

STEPS TO REPRODUCE
1. Configure a left vertical panel containing a task manager
2. Click the configuration button on this panel
3. Move the mouse cursor towards the task manager in order to make the options menu appear
4. Move the mouse cursor towards the options menu : it disappears immediately without being able to use it.
Some times it doesn't disappears but more often than not it does.

OBSERVED RESULT
the option menu disappears

EXPECTED RESULT
the option menu doesn't disappears

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: KDE Neon 5.17.2
(available in About System)
KDE Plasma Version: 5.17.2
KDE Frameworks Version: 5.63.0
Qt Version: 5.13.1

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2019-11-04 17:35:50 UTC
I thought we had fixed this, darn. :/
Comment 2 Nate Graham 2020-01-01 23:16:25 UTC
*** Bug 415405 has been marked as a duplicate of this bug. ***
Comment 3 Patrick Silva 2020-01-20 21:16:32 UTC
Sometimes I see this behavior on Neon ustable edition with options menu of a widget placed on horizontal panel.
Comment 4 Nate Graham 2020-03-06 03:45:53 UTC
Submitted a patch to fix this: https://phabricator.kde.org/D27877
Comment 5 Nate Graham 2020-03-13 16:05:57 UTC
Git commit 9768200d9a27e4e391ce9aa3cf261db95d99b0c8 by Nate Graham.
Committed on 13/03/2020 at 16:05.
Pushed by ngraham into branch 'Plasma/5.18'.

Make panel edit mode tooltip not unexpectedly disappear under certain circumstances

Summary:
The panel edit mode tooltip can currently disappear in an irritating manner under two circumstances:
- You need to mouse the mouse diagonally out of the configuration areat to reach the tooltop, because the timer's duration is very short
- You move the mouse between the tooltip and the configuration area in preparation for moving it to another applet, because the timer did not stop when moving from the tooltip to the configuration area

This patch fixes both issues by increasing the timer duration and stopping the timer when entering the configuration area
FIXED-IN: 5.18.4

Test Plan:
Edit the panel
Hover over an applet and move the mouse diagonally to its tooltip, crossing empty space
Hover over an applet and move the mouse back to the configuration area, then back to the applet, and back to the configuration area, then to another applet, then to that applet's tooltip

In both cases, the tooltip remains visible, as expected.

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27877

M  +3    -1    containments/panel/contents/ui/ConfigOverlay.qml

https://commits.kde.org/plasma-desktop/9768200d9a27e4e391ce9aa3cf261db95d99b0c8
Comment 6 Patrick Silva 2020-04-10 13:21:39 UTC
Created attachment 127426 [details]
screen recording

Unfortunately this problem is still happening.
Watch the attached screen recording please.

Operating System: Arch Linux 
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.68.0
Qt Version: 5.14.2
Comment 7 Nate Graham 2020-04-12 00:06:15 UTC
Aargh! Based on your video it's at least better than it was before... :/
Comment 8 Nate Graham 2021-03-12 23:49:41 UTC
This has gotten worse lately. It's become utterly infuriating.
Comment 9 Nate Graham 2021-03-15 20:17:36 UTC
The bug is trivially 100% reproducible with the System Tray applet for me.

Some print statement debugging shows that sometimes the currentApplet variable doesn't get set when the cursor moved from one applet to another, which messes up the timers and causes the bug. So the last change I made for this wasn't wrong, but didn't address the root cause.
Comment 10 Nate Graham 2021-03-15 20:21:26 UTC
I think I found the problem: when the cursor passes over the panel's margins on its way to the pop-up, currentApplet gets reset to null, which triggers logic to start hiding the popup and disabled the mousearea in the popup that keeps it open when the cursor is over it.

You can kinda sorta fix this by not disabling the mousearea when currentApplet is null, but then the buttons don't work because they can't target the applet properly.

It seems like we need to not unset currentApplet so aggressively.
Comment 11 Bug Janitor Service 2021-03-15 20:36:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/382
Comment 12 Bug Janitor Service 2021-04-09 21:51:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/777
Comment 13 Nate Graham 2021-04-23 21:32:45 UTC
Git commit 40c7390b85855b0a8685888a1bb30c9b3e81c23d by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 23/04/2021 at 21:32.
Pushed by ngraham into branch 'Plasma/5.21'.

Add a -1 to make the mouse input not redirect to a margin pixel.
FIXED-IN: 5.22


(cherry picked from commit 111819e198aa06e442a6b7556169ae5b4143a5ae)

M  +6    -3    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/40c7390b85855b0a8685888a1bb30c9b3e81c23d
Comment 14 Nate Graham 2021-10-05 00:09:30 UTC
*** Bug 443217 has been marked as a duplicate of this bug. ***