Add a -1 to make the mouse input not redirect to a margin pixel.

BUG: 413736
FIXED-IN: 5.22


(cherry picked from commit 111819e198aa06e442a6b7556169ae5b4143a5ae)